# rag-app

./: .dockerignore  .env.ci  .env.example  .gitignore  DECISIONS.md  DEVLOG.md.save  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  init-app-user.sh  init.sql  pyproject.toml
.github/workflows/: ci.yaml  sweep.yaml
alembic/: env.py
alembic/versions/: 2026_07_11_1216-2b535d2f1f1d_initial_schema_with_rls.py  2026_07_14_1415-d0cc4e53de66_add_hnsw_index_to_vector_content.py  2026_07_17_1025-bef71aa6cdd6_creating_schemas_for_auth.py  2026_07_21_1119-447df97bb59e_create_whoami_function.py
scripts/: bootstrap-pg.sh
src/rag_app/: config.py  schemas.py
src/rag_app/api/: _helpers.py  deps.py  main.py
src/rag_app/api/routes/: auth.py  dev.py  ingest.py  query.py
src/rag_app/app/: deps.py  main.py
src/rag_app/app/routes/: ingest.py  query.py
src/rag_app/chunkings/: chunker.py
src/rag_app/db/: bootstrap.py  create_db.py  drop_db.py  engine.py
src/rag_app/embeddings/: embedder.py
src/rag_app/exceptions/: __init__.py
src/rag_app/llm/: factory.py  llm_client.py
src/rag_app/models/: __init__.py  chunk.py  document.py  owner.py  session.py  user.py  vector.py
src/rag_app/services/: answerer.py  ingestor.py  retriever.py
src/rag_app/static/: demo.html  demo.js
src/rag_app/stores/: __init__.py  chroma_vector_store.py  chunk_store.py  document_store.py  pg_vector_store.py  users_store.py  vector_store.py
static/: api.js  app.js  config.js  demo.html  index.html  style.css
tests/: conftest.py  fakes.py  test_answerer.py  test_chunking.py  test_dbs.py  test_embeddings.py  test_ingestion.py  test_llm_client.py  test_multi_tenancy.py
