[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-app"
version = "0.1.0"
description = "Backend-first retrieval-augmented generation app (MVP v1)"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # encode_document / encode_query methods - for some models neccessary - require sentence-transformers v5+
    "sentence-transformers>=5.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.49",
    "fastapi>=0.138.0",
    "chromadb>=1.5.9",
    "httpx>=0.27",
]

# Test-only deps. Already present in .venv but were undeclared; pin loosely so the suite is
# reproducible. httpx is also pulled transitively, but the tests import it directly (MockTransport).
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# Non-.py files setuptools must copy into the installed package. The Docker image runs
# rag_app from site-packages (no repo tree), so the frontend ships as package data.
[tool.setuptools.package-data]
rag_app = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true
